--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
             <h2>A game by Zephyr Studio</h2>
 
             <section class="btn_xl">
-                <a href="/lobby" title="Click to connect">Play</a>
+                <a href="/lobby" title="Click to play">Play</a>
             </section>
         </section>
     </main>
