--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Rules</title>
+    <title>Don't Collapse | Rules</title>
     <meta name="description" content="Don't Collapse rules"/>
     <meta name="author" content="Zephyr Studio" />
     <link rel="stylesheet" href="CSS/style.css" />
