--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -1,3 +1,35 @@
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  100% {
+    opacity: 0;
+  }
+  0% {
+    opacity: 1;
+  }
+}
+@keyframes slide-up {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes slide-right {
+  0% {
+    transform: translateX(-20%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
 html,
 body {
   height: 100%;
@@ -7,6 +39,7 @@ body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 /* -------------------------------------------------------------------------- */
 /*                                Progress Bar                                */
@@ -47,31 +80,9 @@ body {
   border-radius: 10%;
   cursor: pointer;
 }
-#shop-button[open] {
-  animation: slide-up 100ms forwards, fade-in 250ms forwards;
-}
-#shop-button[open]::backdrop {
-  animation: fade-in 250ms forwards;
-}
 /* -------------------------------------------------------------------------- */
 /*                                    Modals                                  */
 /* -------------------------------------------------------------------------- */
-#shop-modal {
-  height: 700px;
-  width: 1200px;
-}
-#shop-modal .modal-content {
-  text-align: center;
-}
-#chat-modal {
-  height: 700px;
-  width: 300px;
-  max-width: 700px;
-  margin-left: 20px;
-}
-#chat-modal #title-modal {
-  margin: 0;
-}
 .modal {
   padding: 0;
 }
@@ -80,12 +91,39 @@ body {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.modal #title-modal {
-  margin-top: 0;
-  padding: 1rem;
+.modal .modal-content .top-modal {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+.modal .modal-content .top-modal .title-modal {
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+.modal .modal-content .top-modal .close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: 1000;
+}
+.modal .modal-content .top-modal .close-button:hover {
+  color: #faa200;
+  text-decoration: none;
+  cursor: pointer;
 }
 .modal::backdrop {
   background: rgba(0, 0, 0, 0.6);
+}
+.modal#shop-modal[open] {
+  animation: slide-up 100ms forwards, fade-in 250ms forwards;
+}
+.modal#chat-modal[open] {
+  animation: slide-right 100ms forwards, fade-in 250ms forwards;
+}
+.modal::backdrop {
+  animation: fade-in 250ms forwards;
 }
 .modal[closing] {
   display: block;
@@ -96,73 +134,38 @@ body {
 .modal[closing]::backdrop {
   animation: fade-out 250ms forwards;
 }
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fade-out {
-  100% {
-    opacity: 0;
-  }
-  0% {
-    opacity: 1;
-  }
-}
-@keyframes slide-up {
-  0% {
-    transform: translateY(100%);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
-@keyframes slide-right {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(110%);
-  }
-}
 .selected {
   background-color: red;
 }
 /* -------------------------------------------------------------------------- */
 /*                                Close Button                                */
 /* -------------------------------------------------------------------------- */
-.close-button {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: 1000;
-}
-.close-button:hover {
-  color: #faa200;
-  text-decoration: none;
-  cursor: pointer;
-}
 /* -------------------------------------------------------------------------- */
 /*                                    Shop                                    */
 /* -------------------------------------------------------------------------- */
-#shop {
+#shop-modal {
+  height: 700px;
+  width: 1200px;
+  overflow: hidden;
+}
+#shop-modal .modal-content {
+  text-align: center;
+}
+#shop-modal .modal-content #shop {
   display: grid;
   grid-template-columns: 2fr 2fr 1fr;
   grid-auto-rows: minmax(30px, auto);
 }
-#shop .rubric {
+#shop-modal .modal-content #shop .rubric {
   border: solid 2px black;
 }
-#shop .clickable:hover:not(.selected) {
+#shop-modal .modal-content #shop .clickable:hover:not(.selected) {
   color: #faa200;
   background-color: rgba(51, 255, 0, 0.2);
   text-decoration: none;
   cursor: pointer;
 }
-#shop #main-title {
+#shop-modal .modal-content #shop #main-title {
   grid-column: 1/2;
   grid-row: 1/2;
   border-bottom: none;
@@ -170,25 +173,25 @@ body {
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
 }
-#shop #main-title .clickable {
+#shop-modal .modal-content #shop #main-title .clickable {
   padding: 5%;
 }
-#shop #supplier {
+#shop-modal .modal-content #shop #supplier {
   grid-column: 3/4;
   grid-row: 2/3;
   display: grid;
   grid-template-columns: 4fr;
 }
-#shop #supplier .clickable {
+#shop-modal .modal-content #shop #supplier .clickable {
   padding: 12.5%;
 }
-#shop #left-page {
+#shop-modal .modal-content #shop #left-page {
   grid-column: 1/2;
   grid-row: 2/3;
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
-#shop #right-page {
+#shop-modal .modal-content #shop #right-page {
   grid-column: 2/3;
   grid-row: 2/3;
   border-left: none;
@@ -196,44 +199,89 @@ body {
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
-#shop #left-page div,
-#shop #right-page div {
+#shop-modal .modal-content #shop #left-page div,
+#shop-modal .modal-content #shop #right-page div {
   margin: 1rem;
   border: dashed 2px black;
 }
 /* -------------------------------------------------------------------------- */
 /*                                    Chat                                    */
 /* -------------------------------------------------------------------------- */
-#messages {
+#chat-modal {
+  height: 700px;
+  width: 300px;
+  max-width: 700px;
+  margin-left: 20px;
+  overflow-y: auto;
+}
+#chat-modal #chatForm {
+  display: flex;
+  justify-content: space-between;
+}
+#chat-modal #chatForm input {
+  border-radius: 8px;
+  height: 2em;
+  width: 75%;
+}
+#chat-modal #chatForm button {
+  border-radius: 8px;
+}
+#chat-modal #messages {
   padding-top: 20px;
   padding-bottom: 10px;
   display: flex;
   flex-direction: column-reverse;
 }
-#messages .sender {
+#chat-modal #messages .sender {
   display: grid;
   justify-content: right;
 }
-#messages .receiver {
+#chat-modal #messages .receiver {
   display: grid;
   justify-content: left;
 }
-#messages .username {
+#chat-modal #messages .username {
   font-size: small;
 }
-#messages .host {
+#chat-modal #messages .host {
   color: red;
 }
-#messages .J1 {
+#chat-modal #messages .J1 {
   color: #00ff00;
 }
-#messages .J2 {
+#chat-modal #messages .J2 {
   color: #e100ff;
 }
-#messages .J3 {
+#chat-modal #messages .J3 {
   color: blue;
 }
-#messages #chatForm {
-  display: flex;
-  justify-content: space-around;
+/* -------------------------------------------------------------------------- */
+/*                                 Parameters                                 */
+/* -------------------------------------------------------------------------- */
+#parameters {
+  position: fixed;
+  bottom: 2em;
+  right: 2em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
+  padding: 1em;
+}
+#parameters .fa-volume-off,
+#parameters .fa-volume-up {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+#parameters .fa-sign-out {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+#parameters .fa-cogs {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+#parameters i {
+  font-size: 3em;
 }
