--- a/views/game.ejs
+++ b/views/game.ejs
@@ -11,6 +11,10 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="JS/http.js" type="text/javascript"></script>
 
+    <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">s -->
+    <script src="https://kit.fontawesome.com/b89837f3ad.js" crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" href="/CSS/hud.css">
 
 </head>
@@ -20,13 +24,15 @@
     <input type="hidden" value="<%= username %>" id="username" />
 
     <div id="room">
-        <h1> Welcome <%= username %></h1>
+        <h1> Welcome <%= username %>
+        </h1>
         <ul id="player_list" class="room"></ul>
         <button type="submit" id="BtnGame" style="display: none;" class="room">Start Game !</button>
     </div>
 
     <div style="display: none;" id="game">
-        <h1> Let's play <%= username %></h1>
+        <h1> Let's play <%= username %>
+        </h1>
 
 
         <!-- Progress Bar -->
@@ -37,6 +43,10 @@
                 <div class="progress-container">Ecologic</div>
             </div>
 
+            <div id="money-container">
+                <p id="money-amount"></p>
+            </div>
+
             <!-- Modal Shop -->
             <button id="shop-button">Shop</button>
         </div>
@@ -45,9 +55,10 @@
 
         <dialog class="modal" id="shop-modal">
             <div class="modal-content">
-                <span class="close-button" id="close-shop">&times;</span>
-                <h2 id="title-modal">Bienvenue dans le shop !</h2>
-
+                <div class="top-modal">
+                    <h2 class="title-modal">Bienvenue dans le shop !</h2>
+                    <span class="close-button" id="close-shop">&times;</span>
+                </div>
                 <div id="shop">
                     <div id="main-title" class="rubric">
                         <div class="top1 clickable selected">Ressources</div>
@@ -403,22 +414,27 @@
     <button id="chat-button">Open Chat</button>
     <dialog class="modal" id="chat-modal">
         <div class="modal-content">
-            <span class="close-button" id="close-chat">&times;</span>
-            <h2 id="title-modal">Alors qu'est ce que ca dit ?</h2>
-            
+            <div class="top-modal">
+                <h2 class="title-modal">Alors qu'est ce que ça dit ?</h2>
+                <span class="close-button" id="close-chat">&times;</span>
+            </div>
             <form id="chatForm" action="">
-                <input id="input-chat" autocomplete="off" /><button>Send</button>
+                <input id="input-chat" autocomplete="off" placeholder="Message..." /><button>Send</button>
             </form>
             <div id="messages"></div>
-            
+
         </div>
     </dialog>
 
+    <div id="parameters">
+        <i class="fa fa-cogs" aria-hidden="true"></i>
+        <i class="param-content fa fa-volume-up" aria-hidden="true" style="display:none;"></i>
+        <i class="param-content fa fa-volume-off" aria-hidden="true" style="display:none;"></i>
+        <i class="param-content fa fa-sign-out" aria-hidden="true" style="display:none;"></i>
+    </div>
 
-
-
+    <!-- ------------------------------- Script -------------------------------- -->
     <script src="JS/game/hud/hud.js" type="module"></script>
-
     <script src="JS/WebSocket.js" type="text/javascript"></script>
     <script src="JS/game.js" type="text/javascript"></script>
 </body>
