--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -370,14 +370,15 @@ body {
     grid-template-rows: 1fr 1fr;
     column-gap: 20px;
     row-gap: 20px;
+    justify-items: center;
     
     .fa-volume-high,
-    .fa-volume-xmark {
+    .fa-volume-off {
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    .fa-music,
-    .fa-music-slash {
+    .fa-bell,
+    .fa-bell-slash {
         grid-column: 2/3;
         grid-row: 1/2;
     }
