--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -98,9 +98,9 @@ body {
     }
 }
 
-#shop-button {
+.button {
     height: 50px;
-    width: 50px;
+    width: 70px;
     border-radius: 10%;
     cursor: pointer;
 
@@ -186,14 +186,6 @@ body {
 
 
 
-
-
-/* -------------------------------------------------------------------------- */
-/*                                Close Button                                */
-/* -------------------------------------------------------------------------- */
-
-
-
 /* -------------------------------------------------------------------------- */
 /*                                    Shop                                    */
 /* -------------------------------------------------------------------------- */
@@ -210,15 +202,11 @@ body {
             display: grid;
             grid-template-columns: 2fr 2fr 1fr;
             //grid-template-rows: 30px 3fr;
-            grid-auto-rows: minmax(30px, auto);
+            grid-auto-rows: minmax(40px, auto);
 
             .rubric {
-                border: solid 2px black;
+                border: solid 2px black
             }
-
-            // .clickable {
-            //     align-items: center;
-            // }
 
             .clickable:hover:not(.selected) {
                 color: #faa200;
@@ -232,13 +220,15 @@ body {
                 grid-column: 1/2;
                 grid-row: 1/2;
                 border-bottom: none;
-
                 display: grid;
                 grid-template-columns: repeat(4, 1fr);
                 align-items: center;
 
-                .clickable {
-                    padding: 5%;
+                div {
+                    display: flex;
+                    height: 100%;
+                    align-items: center;
+                    justify-content: center;
                 }
             }
 
@@ -247,10 +237,16 @@ body {
                 grid-row: 2/3;
 
                 display: grid;
-                grid-template-columns: 4fr;
+                //grid-template-columns: 4fr;
+                grid-template-rows: repeat(4, 1fr);
+                grid-auto-rows: minmax(100px, auto);
 
-                .clickable {
-                    padding: 12.5%;
+
+                div {
+                    display: flex;
+                    height: 100%;
+                    justify-content: center;
+                    align-items: center;
                 }
 
             }
@@ -261,6 +257,7 @@ body {
 
                 display: grid;
                 grid-template-rows: 1fr 1fr;
+
 
             }
 
@@ -274,6 +271,7 @@ body {
                 display: grid;
                 grid-template-rows: 1fr 1fr;
 
+
             }
 
             #left-page div,
@@ -281,6 +279,15 @@ body {
                 margin: 1rem;
                 // height: 8rem;
                 border: dashed 2px black;
+                height: 100px;
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+                justify-content: space-between;
+
+            }
+            .buy-button{
+                height: 30px;
             }
         }
     }
@@ -371,12 +378,13 @@ body {
     column-gap: 20px;
     row-gap: 20px;
     justify-items: center;
-    
+
     .fa-volume-high,
     .fa-volume-off {
         grid-column: 1/2;
         grid-row: 1/2;
     }
+
     .fa-bell,
     .fa-bell-slash {
         grid-column: 2/3;
