--- a/views/game.ejs
+++ b/views/game.ejs
@@ -415,7 +415,7 @@
                 <span class="close-button" id="close-chat">&times;</span>
             </div>
             <form id="chatForm" action="">
-                <input id="input-chat" autocomplete="off" placeholder="Message..." /><button>Send</button>
+                <input id="input-chat" autocomplete="off" placeholder="Message..." /><button class="button">Send</button>
             </form>
             <div id="messages"></div>
 
@@ -433,8 +433,8 @@
         <dialog id="confirm-disconnect">
             <p>Voulez vous vraiment vous déconnecter ?</p>
 
-            <button class="oui-button">Oui</button>
-            <button class="non-button">Non</button>
+            <button class="oui-button button">Oui</button>
+            <button class="non-button button">Non</button>
 
         </dialog>
     </div>
