--- a/views/game.ejs
+++ b/views/game.ejs
@@ -445,8 +445,8 @@
 
     <!-- ------------------------------- Script -------------------------------- -->
     <script src="JS/game/hud/hud.js" type="module"></script>
-    <script src="JS/WebSocket.js" type="text/javascript"></script>
-    <script src="JS/game.js" type="text/javascript"></script>
+    <script src="JS/WebSocket.js" type="module"></script>
+    <script src="JS/game.js" type="module"></script>
 </body>
 
 </html>
