--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -51,7 +51,27 @@
     100% {
         transform: translateX(0%);
     }
+}
 
+@keyframes slide-right-params {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(80%);
+    }
+}
+
+
+@keyframes slide-left-params {
+    0% {
+        transform: translateX(120%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
 }
 
 html,
@@ -178,7 +198,6 @@ body {
 
     &::backdrop {
         background: @backdrop-color;
-
     }
 
     &#shop-modal[open] {
@@ -188,7 +207,6 @@ body {
 
     &#chat-modal[open] {
         animation: slide-right 100ms forwards, fade-in 250ms forwards;
-
     }
 
     &::backdrop {
@@ -426,46 +444,47 @@ body {
     padding: 1em;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     column-gap: 20px;
     row-gap: 20px;
     justify-items: center;
 
     .param-content[open] {
-        animation: fade-in 250ms forwards;
+        animation: slide-left-params 100ms forwards, fade-in 250ms forwards;
     }
 
     .param-content[closing] {
-        display: block;
-        pointer-events: none;
-        inset: 0;
-        animation: fade-out 250ms forwards;
+        animation: slide-right-params 100ms forwards, fade-out 250ms forwards;
     }
 
     .fa-volume-high,
     .fa-volume-off {
-        grid-column: 1/2;
+        grid-column: 4/5;
         grid-row: 1/2;
     }
 
     .fa-bell,
     .fa-bell-slash {
-        grid-column: 2/3;
+        grid-column: 3/4;
         grid-row: 1/2;
     }
 
     .fa-right-from-bracket {
         grid-column: 1/2;
-        grid-row: 2/3;
+        grid-row: 1/2;
+    }
+
+    .fa-cloud,
+    .fa-sun {
+        grid-column: 2/3;
+        grid-row: 1/2;
     }
 
     .fa-gears {
-        grid-column: 2/3;
-        grid-row: 2/3;
-
+        grid-column: 5/6;
+        grid-row: 1/2;
     }
-
 
     i {
         font-size: 3em;
