--- a/views/game.ejs
+++ b/views/game.ejs
@@ -433,6 +433,8 @@
         <i class="param-content fa-solid fa-volume-high" style="display:none;"></i>
         <i class="param-content fa-solid fa-volume-off" style="display:none;"></i>
         <i class="param-content fa-solid fa-right-from-bracket" style="display:none;"></i>
+        <i class="param-content fa-solid fa-cloud" style="display:none;"></i>
+        <i class="param-content fa-solid fa-sun" style="display:none;"></i>
         <i class="fa-solid fa-gears"></i>
         <dialog id="confirm-disconnect">
             <p>Voulez vous vraiment vous déconnecter ?</p>
